scaffold/typescript-go-main/testdata/baselines/reference/submodule/conformance/importTag11.errors.txt
/foo.js(3,2): error TS1005: 'from' expected.


==== /foo.js (1 errors) ====
    /**
     * @import foo
     */
     
!!! error TS1005: 'from' expected.
    